# e_agg

./: .dockerignore  .gitignore  Dockerfile  compose.test.yaml  compose.yaml  entrypoint.sh
aggregator_app/: pyproject.toml
aggregator_app/alembic/: env.py
aggregator_app/alembic/versions/: 1e5544a62bc7_add_other_event_status.py  6feb905485a6_add_outbox_model.py  78df416b6e3e_empty_migration.py  8a9b422d49b9_fix_string_fields_size.py  a3770f47d15d_add_place_event_member_models.py  ba993bcb5b90_fix_member_ticket_id.py  e54a51533e3a_add_inbox_model.py  fe8d3a6f6f98_add_sync_meta_model.py
aggregator_app/app/: config.py  error_handlers.py  main.py
aggregator_app/app/api/: dependencies.py  filters.py
aggregator_app/app/api/routers/: events.py  healthcheck.py  sync.py  tickets.py
aggregator_app/app/orm/: db_manager.py  models.py  uow.py
aggregator_app/app/services/: __init__.py  events.py  events_provider.py  inbox.py  notification.py  outbox.py  sync.py  tickets.py  utils.py
aggregator_app/tests/: conftest.py  helpers.py
aggregator_app/tests/api/: conftest.py  test_events.py  test_healthcheck.py  test_sync.py  test_tickets.py
aggregator_app/tests/migrations/: conftest.py  test_migrations.py
aggregator_app/tests/repositories/: conftest.py  helpers.py  test_event.py  test_inbox.py  test_member.py  test_outbox.py  test_place.py  test_sync_meta.py
aggregator_app/tests/services/: conftest.py  helpers.py  test_events.py  test_events_provider.py  test_inbox.py  test_notification.py  test_outbox.py  test_sync.py  test_tickets.py
k8s/: postgres-configmap.yaml  (+2 more)
(+21 files in other folders)
