[project]
name = "aggregator-app"
version = "0.1.0"
description = "Events aggregator app"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.3",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "backoff>=2.2.1",
    "fastapi>=0.128.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "TID", "B", "W"]
ignore = ["S101"]
